--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <p>Prova!</p>
+    <head>
+        <meta charset="UTF-8">
+        <script src="quiz.js"></script>
+      </head>
+    
+    <body onload="loadQuestion(0)">
+        <div id="question">
+        </div>
     </body>
 </html>
