--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
         <script src="quiz.js"></script>
       </head>
     
-    <body onload="loadQuestion(0)">
+    <body>
         <div id="question">
+            <h1>MA CHE EPPPI VUOI DA ME?</h1>
+            <h2>Test di affinità con gli EPPPI</h2>
+            <h3><i>Scientificamente provato e testato su un ampio panel di capi e RS della regione</i></h3>
+            <img src="COPERTINA.jpg" onclick="cleanQuestion();loadQuestion(0)">
         </div>
     </body>
 </html>
