--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <title>Test di affinità con gli EPPPI</title>
         <link rel="stylesheet" href="quiz.css">
+        <link rel="icon" type="image/x-icon" href="logoeppiemiro.ico">
         <script src="quiz.js"></script>
       </head>
     
