Prova per whatsapp

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>Test di affinità con gli EPPPI</title>
         <link rel="stylesheet" href="quiz.css">
         <link rel="icon" type="image/x-icon" href="logoeppiemiro.ico">
+        <meta name="description" content="MA CHE EPPPI VUOI DA ME? Test di affinità con gli EPPPI scientificamente provato e testato su un ampio panel di capi e RS della regione" />
+        <meta property="og:image" content="https://iulius87.github.io/logoeppiemiro.png" />
         <script src="quiz.js"></script>
       </head>
     
